Fixed scrollbars for TOC & code blocks

--- a/source/assets/style.styl
+++ b/source/assets/style.styl
@@ -122,7 +122,7 @@ body.landing-page
     pre>code
       text-align: left
       max-height: 250px
-      overflow-y: scroll
+      overflow-y: auto
     p
       font-size: 1.1em;
       line-height: 1.4;
@@ -211,7 +211,7 @@ body.landing-page
   aside
     pre
       max-height: 400px
-      overflow-y: scroll
+      overflow-y: auto
 
   .header>span:not(:last-child)
     margin-right: 0.25em
@@ -240,7 +240,7 @@ body.landing-page
   top: $navbar-height
   bottom: $navbar-height
   color: $white
-  overflow: scroll
+  overflow: auto
   font-family: 'Roboto', Helvetica Neue, Arial, sans-serif
   width: 220px
   padding-right: 20px
